[energidataservice] Consider `Retry-After` header (#20899)
* Consider Retry-After header

Resolves #20897

Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>